--- a/Ebay.com/pom.xml
+++ b/Ebay.com/pom.xml
@@ -23,7 +23,14 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependencies>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+</dependencies>
   <build>
     <finalName>Ebay.com</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
